# rlmobtest-icomp

./: .gitignore  .tool-versions  .~lock.req.csv#  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.py  constants.py  docker-compose.yml  entrypoint.sh  main.py  main_old.py  pyproject.toml  requirements.txt  run_pipeline.py  script_iartes(_caso_de_teste_+_csv).py  script_iartes(_csv).py  script_iartes(_csv)_v2.py  script_iartes(extração_info_app).py  script_iartes_final.py  settings.txt  similarity_folders.py  std.txt  transcription_module.py
.claude/commands/: setup-build.md
agent/: __init__.py  dqn_model.py
browser/: __init__.py  web_automation.py
config/: settings.json  settings.txt
constants/: paths.py
coverage/: coverage.ec
docs/: CHANGELOG_CREWAI.md  CHANGELOG_RECENT.md  DQN_MODEL_EXPLICACAO.md  RELEASE_PROCESS.md  cli_commands.md  contexto_llm_transcricao.md  coverage_improvement_suggestions.md  coverage_metrics.md  dqn_parameters.md  dqn_tutorial.md  formato_iso29119.md  jacoco_coverage_strategies.md  jacoco_setup.md  plots_guide.md  report_generation.md  transcription_flow.drawio
docs/discussions/: DISCUSSION_ACTIVITY_PERSISTENCE.md  DISCUSSION_DQN_ARCHITECTURES.md  DISCUSSION_FLUXO_ATUAL_VS_PROPOSTO.md  DISCUSSION_MODULARIZATION.md
environment/: __init__.py  android_env.py
inputs/tools/: .gitignore
notebooks/: dqn_analysis.ipynb  rl_experiments.ipynb  rlmobtest_training.ipynb  state_analysis.ipynb
rlmobtest/: __main__.py  cli.py  main_old.py
rlmobtest_elianecollins/: __init__.py  conf.py  deeprl.py  mobtest_env.py
sbse_prototype/: EXECUTIVE_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  SBSE_RL_Integration.ipynb  SBSE_RL_Standalone.ipynb  START_HERE.md  example_full_pipeline.py  metrics_calculator.py  requirements_sbse.txt  sbse_optimizer.py  statistical_analysis.py  test_case_representation.py  visualization.py
tests/: test_accumulate_coverage.py  test_checkpoint_extra_state.py  test_coverage_reward.py  test_fuzzy_match.py  test_ollama_check.py  test_smart_inputs.py
transcription/: __init__.py  crew_transcriber.py  similarity_filter.py  transcriber.py
utils/: __init__.py  config_reader.py  constants.py
(+120 files in other folders)
