[project]
name = "rlmobtest-mateus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=1.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uiautomator2>=3.5.0",
]
