[project]
name = "rlmobtest-icomp"
version = "0.1.17"
description = "IARTES Project Testing Tool to automatize mobile test creating with Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mateus Luiz", email = "mateusluizz@hotmail.com" },
  { name = "Eliane Collins", email = "elianecollins@hotmail.com" },
]
maintainers = [{ name = "Maintainers", email = "mateusluizz@hotmail.com" }]
keywords = ["Deep Q Learning", "Exploratory Tests"]

dependencies = [
  "crewai>=0.95.0",
  "langchain-ollama>=1.0.0",
  "litellm[proxy]>=1.75.3",
  "matplotlib>=3.10.7",
  "pandas>=2.3.3",
  "tensorflow>=2.20.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "typer>=0.21.1",
  "uiautomator2>=3.5.0",
]

[project.scripts]
rlmobtest = "rlmobtest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rlmobtest/**", "README.md"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff]
line-length = 100


[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["ruff>=0.14.14", "taplo>=0.9.3"]
test = ["pytest>=9.0.2"]
